tests/outref/TUC001.ref
OCTO> select notathing as a from names; select * from names limit 1;
[ERROR] PATH:LINENUM DATE TIME : Unknown column: NOTATHING
Error with syntax near (line 1, column 7):

select notathing as a from names; select * from names limit 1;
       ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select notathing as a from names;
0|Zero|Cool
OCTO> 
